cabal-version: 2.4
name:          vesting
version:       1.0.0.0
license: MIT
author:        Richard Wallace, Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple

common lang
  build-depends:    base ^>=4.14
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  exposed-modules: Canonical.Vesting
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Werror

executable create-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , optparse-applicative
    , vesting

executable meta-shake
  import:         lang
  hs-source-dirs: app
  main-is:        MetaShake.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , shake

executable project-shake
  import:         lang
  hs-source-dirs: app
  main-is:        Shake.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , shake
    , plutus-ledger-api
    , bytestring
    , aeson
    , vesting
    , cardano-api
    , time
    , directory
